fix button color, font sizing on mobile devices. added css media query for small screens

--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +15,7 @@ body {
     align-items: center;
   }
 
-@media (max-width: 650px) {
+@media (max-width: 550px) {
     #content {
         display: flex;
         flex-direction: column;
@@ -30,7 +28,7 @@ body {
     }
   }
 
-@media (min-width: 651px) {
+@media (min-width: 551px) {
     #content {
         display: flex;
         flex-direction: column;
@@ -38,25 +36,25 @@ body {
         align-items: center;
         gap: 30px;
         margin: 4%;
-        padding: 4% 2%;
+        padding: 2% 0;
         width: 100%;
-        max-width: 600px;
+        max-width: 450px;
     }
 }
 
 #content {
     border-radius: 6px;
     background-color: rgb(216, 49, 49);
-    color: rgb(251, 221, 165);
+    color: rgb(244, 235, 167);
     border: 2px solid rgb(255, 145, 145);
 }
 
 p {
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 h1 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 
 input[type=text] {
@@ -74,8 +72,17 @@ input[type=submit] {
     font-family: system-ui, sans-serif;
     padding: 6px 15px;
     letter-spacing: .06rem;
-    border: 1px solid rgb(251, 221, 165);
     border-radius: 3px;
+    background-color: rgb(239, 211, 161);
+    border: 1px solid rgb(255, 145, 145);
+    color: rgb(216, 49, 49);
+}
+
+input[type=submit]:hover {
+    background-color: rgb(244, 235, 167);
+    border: 1px solid rgb(239, 211, 161);
+    color: rgb(219, 19, 19);
+    cursor: pointer;
 }
     
 form {
